German dpkg translation update
Update to 971t7f.

--- a/po/de.po
+++ b/po/de.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.15.4~\n"
+"Project-Id-Version: Debian dpkg 1.15.4\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:04+0200\n"
-"PO-Revision-Date: 2009-09-06 08:43+0200\n"
+"PO-Revision-Date: 2009-09-07 11:30+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -585,7 +585,7 @@ msgid "failed to create pipe"
 msgstr "Konnte Pipe nicht anlegen"
 
 #: lib/dpkg/mlib.c:124
-#, fuzzy, c-format
+#, c-format
 msgid "error writing to '%s'"
 msgstr "Fehler beim Schreiben von »%s«"
 
@@ -600,9 +600,9 @@ msgid "unable to set close-on-exec flag for %.250s"
 msgstr "Kann »close-on-exec«-Flag für »%.250s« nicht setzen"
 
 #: lib/dpkg/myopt.c:62
-#, fuzzy, c-format
+#, c-format
 msgid "configuration error: %s:%d: %s"
-msgstr "Konfigurationsfehler: %s benötigt einen Wert"
+msgstr "Konfigurationsfehler: %s:%d: %s"
 
 #: lib/dpkg/myopt.c:74
 #, c-format
@@ -612,22 +612,22 @@ msgstr "Konnte Konfigurationsdatei »%.255s« nicht zum Lesen öffnen: %s"
 #: lib/dpkg/myopt.c:101
 #, c-format
 msgid "unbalanced quotes in '%s'"
-msgstr ""
+msgstr "unausgeglichene Anführungszeichen in »%s«"
 
 #: lib/dpkg/myopt.c:117
-#, fuzzy, c-format
+#, c-format
 msgid "unknown option '%s'"
 msgstr "unbekannte Option »%s«"
 
 #: lib/dpkg/myopt.c:121
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' needs a value"
-msgstr "Option --%s benötigt einen Wert"
+msgstr "»%s« benötigt einen Wert"
 
 #: lib/dpkg/myopt.c:127
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' does not take a value"
-msgstr "Option --%s akzeptiert keine Werte"
+msgstr "»%s« akzeptiert keine Werte"
 
 #: lib/dpkg/myopt.c:132
 #, c-format
@@ -1504,13 +1504,13 @@ msgstr "--%s benötigt mindestens eine Paket-Archivdatei als Argument"
 #: dpkg-split/info.c:241 dpkg-split/main.c:56 dpkg-split/main.c:93
 #: dpkg-split/queue.c:125 dpkg-split/queue.c:245
 msgid "<standard output>"
-msgstr ""
+msgstr "<Standardausgabe>"
 
 #: src/archives.c:1222 src/packages.c:269 src/query.c:185 src/query.c:277
 #: src/query.c:378 src/query.c:434 src/select.c:81 dpkg-split/main.c:198
 #: dpkg-split/queue.c:192
 msgid "<standard error>"
-msgstr ""
+msgstr "<Standardfehlerausgabe>"
 
 #: src/archives.c:1263
 #, c-format
@@ -2189,9 +2189,9 @@ msgid "--compare-versions bad relation"
 msgstr "--compare-versions fehlerhafte Beziehung"
 
 #: src/enquiry.c:447 src/enquiry.c:454
-#, fuzzy, c-format
+#, c-format
 msgid "version '%s' has bad syntax: %s"
-msgstr "dpkg: Version »%s« hat falsche Syntax: %s\n"
+msgstr "Version »%s« hat falsche Syntax: %s"
 
 #: src/errors.c:61
 #, c-format
@@ -3384,7 +3384,7 @@ msgstr ""
 #: src/query.c:539
 #, c-format
 msgid "control file contains %c"
-msgstr ""
+msgstr "control-Datei enthält %c"
 
 #: src/query.c:559
 #, c-format
@@ -3392,7 +3392,7 @@ msgid "Debian `%s' package management program query tool\n"
 msgstr "Debian »%s« Abfragewerkzeug für Paketmanagement-Programm\n"
 
 #: src/query.c:576
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Commands:\n"
 "  -s|--status <package> ...        Display package status details.\n"
@@ -3407,13 +3407,13 @@ msgid ""
 msgstr ""
 "Befehle:\n"
 "  -s|--status <Paket> ...          Details zum Paketstatus anzeigen.\n"
-"  -p|--print-avail <Paket> ...     Details zur vorhandenen Version "
-"anzeigen.\n"
-"  -L|--listfiles <Paket> ...       zu Paket(en) gehörende Dateien "
-"auflisten.\n"
+"  -p|--print-avail <Paket> ...     Details zur vorhandenen Version anzeigen.\n"
+"  -L|--listfiles <Paket> ...       zu Paket(en) gehörende Dateien auflisten.\n"
 "  -l|--list [<Muster> ...]         Übersicht zu Paketen auflisten.\n"
 "  -W|--show <Muster> ...           Informationen zu Paket(en) anzeigen.\n"
 "  -S|--search <Muster> ...         Pakete suchen, denen Datei(en) gehören.\n"
+"  -c|--control-path <Paket> [<Datei>]\n"
+"                                   Pfad zur control-Datei des Paketes ausgeben.\n"
 
 #: src/query.c:594
 #, c-format
@@ -3987,9 +3987,9 @@ msgid "error opening conffiles file"
 msgstr "Fehler beim Öffnen der conffiles-Datei"
 
 #: dpkg-deb/build.c:355
-#, fuzzy, c-format
+#, c-format
 msgid "ignoring %d warnings about the control file(s)\n"
-msgstr "dpkg-deb: Ignoriere %d Warnungen wegen der control-Datei(en)\n"
+msgstr "Ignoriere %d Warnungen wegen der control-Datei(en)\n"
 
 #: dpkg-deb/build.c:364
 #, c-format
@@ -5743,12 +5743,3 @@ msgid ""
 msgstr ""
 "Überspringe Erstellung von %s, weil die zugehörige Datei %s\n"
 " (der Link-Gruppe %s) nicht existiert."
-
-#~ msgid "failed write during hashreport"
-#~ msgstr "Schreibfehler während des Hashberichts"
-
-#~ msgid "configuration error: unknown option %s"
-#~ msgstr "Konfigurationsfehler: unbekannte Option %s"
-
-#~ msgid "configuration error: %s does not take a value"
-#~ msgstr "Konfigurationsfehler: %s akzeptiert keine Werte"
