--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.15.5) UNRELEASED; urgency=low
 
+  [ Updated dpkg translations ]
+  * German (Sven Joachim).
+
   [ Updated dselect translations ]
   * German (Sven Joachim).
 
