Fix error in French manpages translation

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -393,7 +393,7 @@ msgstr ""
 "ligne (après le champ «\\ Description\\ »). Les lignes suivantes peuvent "
 "servir à une description plus longue et plus détaillée. Chaque ligne de "
 "cette description longue doit être précédée d'une espace\\ ; quand c'est une "
-"ligne blanche elle doit contenir un seul «\\ .\\ » avant cet espace."
+"ligne blanche, elle doit contenir un seul «\\ .\\ » après cet espace."
 
 #. type: SH
 #: deb-control.5:52
