--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.15.5) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Remove obsolete conffiles on purge. Closes: #454628
+
   [ Updated dpkg translations ]
   * German (Sven Joachim).
 
