--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Remove obsolete conffiles on purge. Closes: #421367, #453005, #454628
 
+  [ Raphaël Hertzog ]
+  * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
+    that /etc/dpkg/origins/default exists. Closes: #545275
+
   [ Updated dpkg translations ]
   * German (Sven Joachim).
 
