Czech translation update
dpkg: 978t
dselect: 280t

--- a/dselect/po/cs.po
+++ b/dselect/po/cs.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:05+0200\n"
-"PO-Revision-Date: 2009-06-19 07:49+0200\n"
+"PO-Revision-Date: 2009-09-11 20:35+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -833,7 +833,7 @@ msgstr ""
 
 #: dselect/main.cc:176 dselect/main.cc:223
 msgid "<standard output>"
-msgstr ""
+msgstr "<standardní výstup>"
 
 #: dselect/main.cc:185
 #, c-format
@@ -1089,9 +1089,8 @@ msgid "Press <enter> to continue.\n"
 msgstr "Pokračujte stiskem klávesy <enter>.\n"
 
 #: dselect/method.cc:183
-#, fuzzy
 msgid "<standard error>"
-msgstr "zapsání chyby na chybový výstup"
+msgstr "<chybový výstup>"
 
 #: dselect/method.cc:186
 msgid "error reading acknowledgement of program failure message"
