--- a/po/cs.po
+++ b/po/cs.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:04+0200\n"
-"PO-Revision-Date: 2009-06-19 11:28+0200\n"
+"PO-Revision-Date: 2009-09-11 21:25+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -578,9 +578,9 @@ msgid "failed to create pipe"
 msgstr "nelze vytvořit rouru"
 
 #: lib/dpkg/mlib.c:124
-#, fuzzy, c-format
+#, c-format
 msgid "error writing to '%s'"
-msgstr "chyba při zápisu „%s“"
+msgstr "chyba při zápisu do „%s“"
 
 #: lib/dpkg/mlib.c:131
 #, c-format
@@ -593,9 +593,9 @@ msgid "unable to set close-on-exec flag for %.250s"
 msgstr "nelze nastavit příznak zavřít-při-spuštění pro „%.250s“"
 
 #: lib/dpkg/myopt.c:62
-#, fuzzy, c-format
+#, c-format
 msgid "configuration error: %s:%d: %s"
-msgstr "chyba konfigurace: %s vyžaduje hodnotu"
+msgstr "chyba konfigurace: %s:%d: %s"
 
 #: lib/dpkg/myopt.c:74
 #, c-format
@@ -605,22 +605,22 @@ msgstr "selhalo otevření konfiguračního souboru „%.255s“ pro čtení: %s
 #: lib/dpkg/myopt.c:101
 #, c-format
 msgid "unbalanced quotes in '%s'"
-msgstr ""
+msgstr "nevypárované uvozovky v „%s“"
 
 #: lib/dpkg/myopt.c:117
-#, fuzzy, c-format
+#, c-format
 msgid "unknown option '%s'"
 msgstr "neznámá volba „%s“"
 
 #: lib/dpkg/myopt.c:121
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' needs a value"
-msgstr "přepínač --%s vyžaduje argument"
+msgstr "„%s“ vyžaduje hodnotu"
 
 #: lib/dpkg/myopt.c:127
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' does not take a value"
-msgstr "přepínač --%s musí být zadán bez argumentu"
+msgstr "„%s“ musí být zadán bez argumentu"
 
 #: lib/dpkg/myopt.c:132
 #, c-format
@@ -633,9 +633,9 @@ msgid "error closing configuration file `%.255s'"
 msgstr "chyba při zavírání konfiguračního souboru „%.255s“"
 
 #: lib/dpkg/myopt.c:170
-#, fuzzy, c-format
+#, c-format
 msgid "error opening configuration directory '%s'"
-msgstr "chyba při zavírání konfiguračního souboru „%.255s“"
+msgstr "chyba při otevírání konfiguračního adresáře „%s“"
 
 #: lib/dpkg/myopt.c:230
 #, c-format
@@ -1020,9 +1020,9 @@ msgid "unable to write new trigger interest file `%.250s'"
 msgstr "nelze zapsat nový soubor se zajímavými spouštěči „%.250s“"
 
 #: lib/dpkg/triglib.c:413
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new trigger interest file `%.250s'"
-msgstr "nelze vytvořit nový soubor se zajímavými spouštěči „%.250s“"
+msgstr "nelze zavřít nový soubor se zajímavými spouštěči „%.250s“"
 
 #: lib/dpkg/triglib.c:417
 #, c-format
@@ -1048,9 +1048,9 @@ msgid "unable to write new file triggers file `%.250s'"
 msgstr "nelze zapsat nový soubor se souborovými spouštěči „%.250s“"
 
 #: lib/dpkg/triglib.c:510
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new file triggers file `%.250s'"
-msgstr "nelze vytvořit nový soubor se souborovými spouštěči „%.250s“"
+msgstr "nelze zavřít nový soubor se souborovými spouštěči „%.250s“"
 
 #: lib/dpkg/triglib.c:514
 #, c-format
@@ -1214,16 +1214,16 @@ msgid "Replaced by files in installed package %s ...\n"
 msgstr "Nahrazen soubory v nainstalovaném balíku %s ...\n"
 
 #: src/archives.c:599
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite directory '%.250s' in package %.250s %.250s with "
 "nondirectory"
-msgstr "zkouším přepsat adresář „%.250s“ v balíku %.250s neadresářem"
+msgstr "zkouším přepsat adresář „%.250s“ v balíku %.250s %.250s neadresářem"
 
 #: src/archives.c:611
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite '%.250s', which is also in package %.250s %.250s"
-msgstr "zkouším přepsat soubor „%.250s“, který je také v balíku %.250s"
+msgstr "zkouším přepsat soubor „%.250s“, který je také v balíku %.250s %.250s"
 
 #: src/archives.c:684
 #, c-format
@@ -1403,7 +1403,7 @@ msgstr ""
 "dpkg: možné problémy s odstraněním balíku %s, protože poskytuje %s ...\n"
 
 #: src/archives.c:1054
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: package %s requires reinstallation, but will remove anyway as you "
 "requested.\n"
@@ -1482,13 +1482,13 @@ msgstr "--%s vyžaduje jako argument alespoň jeden soubor s balíkem"
 #: dpkg-split/info.c:241 dpkg-split/main.c:56 dpkg-split/main.c:93
 #: dpkg-split/queue.c:125 dpkg-split/queue.c:245
 msgid "<standard output>"
-msgstr ""
+msgstr "<standardní výstup>"
 
 #: src/archives.c:1222 src/packages.c:269 src/query.c:185 src/query.c:277
 #: src/query.c:378 src/query.c:434 src/select.c:81 dpkg-split/main.c:198
 #: dpkg-split/queue.c:192
 msgid "<standard error>"
-msgstr ""
+msgstr "<chybový výstup>"
 
 #: src/archives.c:1263
 #, c-format
@@ -2157,9 +2157,9 @@ msgid "--compare-versions bad relation"
 msgstr "--compare-versions špatná relace"
 
 #: src/enquiry.c:447 src/enquiry.c:454
-#, fuzzy, c-format
+#, c-format
 msgid "version '%s' has bad syntax: %s"
-msgstr "verze a má špatnou syntaxi: %s\n"
+msgstr "verze „%s“ má špatnou syntaxi: %s"
 
 #: src/errors.c:61
 #, c-format
@@ -3199,19 +3199,17 @@ msgid "unable to delete disappearing control info file `%.250s'"
 msgstr "nelze smazat mizící kontrolní info soubor „%.250s“"
 
 #: src/query.c:115
-#, fuzzy
 msgid ""
 "Desired=Unknown/Install/Remove/Purge/Hold\n"
 "| Status=Not/Inst/Cfg-files/Unpacked/Failed-cfg/Half-inst/trig-aWait/Trig-"
 "pend\n"
 "|/ Err?=(none)/Reinst-required (Status,Err: uppercase=bad)\n"
 msgstr ""
-"Požadované=Neznámé/Instalovat/Odinstalovat/Odstranit/Nechat\n"
+"Požadované=Neznámé/Instalovat/Odinstalovat/Vyčistit/Podržet\n"
 "| Stav=Ne/Instalován/Konfigurační soubory/Rozbalen/Nezkonfigurován/"
 "Nekompletní\n"
 "| instalace/Očekávané spouštěče/Nevyřízené spouštěče\n"
-"|/ Chyba?=(nic)/Nechat/Nutná přeinstalace/X=oba problémy (Stav,Chyba: velké "
-"písmeno=chyba)\n"
+"|/ Chyba?=(nic)/Nutná přeinstalace (Stav,Chyba: velké písmeno=chyba)\n"
 
 #: src/query.c:119
 msgid "Name"
@@ -3305,7 +3303,7 @@ msgstr ""
 #: src/query.c:539
 #, c-format
 msgid "control file contains %c"
-msgstr ""
+msgstr "soubor control obsahuje %c"
 
 #: src/query.c:559
 #, c-format
@@ -3313,7 +3311,7 @@ msgid "Debian `%s' package management program query tool\n"
 msgstr "Debian „%s“ - program pro dotazování se na balíky\n"
 
 #: src/query.c:576
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Commands:\n"
 "  -s|--status <package> ...        Display package status details.\n"
@@ -3333,6 +3331,9 @@ msgstr ""
 "  -l|--list [<vzor> ...]              vypíše balíky ve zhuštěném tvaru\n"
 "  -W|--show <vzor> ...                zobrazí informace o balíku/balících\n"
 "  -S|--search <vzor> ...              najde balík(y) vlastnící soubor(y)\n"
+"  -c|--control-path <jméno-balíku> [<soubor>]\n"
+"                                      vypíše cestu k souboru control\n"
+"\n"
 
 #: src/query.c:594
 #, c-format
@@ -3743,7 +3744,7 @@ msgstr "Byly aktualizovány informace o %d balících.\n"
 #, c-format
 msgid ""
 "obsolete '--%s' option, unavailable packages are automatically cleaned up."
-msgstr ""
+msgstr "zastaralá volba „--%s“, nedostupné balíky jsou čištěny automaticky."
 
 #: dpkg-deb/build.c:101
 #, c-format
@@ -3887,9 +3888,9 @@ msgid "error opening conffiles file"
 msgstr "chyba při otevření soubory conffiles"
 
 #: dpkg-deb/build.c:355
-#, fuzzy, c-format
+#, c-format
 msgid "ignoring %d warnings about the control file(s)\n"
-msgstr "dpkg-deb: ignoruji %d varování o kontrolních souborech\n"
+msgstr "ignoruji %d varování o kontrolních souborech\n"
 
 #: dpkg-deb/build.c:364
 #, c-format
@@ -4661,9 +4662,9 @@ msgid "part size is far too large or is not positive"
 msgstr "velikost části je buď příliš veliká, nebo nekladná"
 
 #: dpkg-split/main.c:129
-#, fuzzy, c-format
+#, c-format
 msgid "part size must be at least %d KiB (to allow for header)"
-msgstr "velikost části musí být alespoň %dk (kvůli hlavičce)"
+msgstr "velikost části musí být alespoň %d KiB (kvůli hlavičce)"
 
 #: dpkg-split/queue.c:77
 #, c-format
@@ -5343,7 +5344,7 @@ msgstr "pro %s neexistují žádné alternativy."
 #: scripts/update-alternatives.pl:261
 #, perl-format
 msgid "%s is dangling, it will be updated with best choice."
-msgstr ""
+msgstr "%s není zakončený, bude nastaven na nejlepší možnost."
 
 #: scripts/update-alternatives.pl:265
 #, perl-format
