--- a/debian/changelog
+++ b/debian/changelog
@@ -9,9 +9,11 @@ dpkg (1.15.5) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
+  * Czech (Miroslav Kure).
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
+  * Czech (Miroslav Kure).
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
