--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
     that /etc/dpkg/origins/default exists. Closes: #545274
+  * Update Standards-Version to 3.8.3 (no changes needed).
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
