Fix small leak when parsing ‘--ignore-depends’ option values

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Check and warn on duplicate conffiles in dpkg-deb. Closes: #131633
   * Make the upstream build system silent by default with automake 1.11 or
     newer, and always verbose when building the Debian packages.
+  * Fix small leak when parsing ‘--ignore-depends’ option values.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
