--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
       information that was previously available through Dpkg::Deps.
   * All dpkg-* perl programs that work with control information have been
     updated to use the new Dpkg::Control interface.
+  * Create Launchpad-Bugs-Fixed directly in the changelog parsing code thanks
+    to a new vendor hook post-process-changelog-entry. Closes: #536066
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
