--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     passed on the command line.
   * Abort on configure if the required C99 extensions are not supported.
   * Add C coding style document.
+  * Make dpkg as strict as dpkg-statoverride on input when validating the
+    parsed data from the statdb.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
