dselect-ftp: Update my e-mail address and copyright

--- a/dselect/methods/ftp/install
+++ b/dselect/methods/ftp/install
@@ -3,7 +3,7 @@
 
 # Copyright (C) 1996 Andy Guy <awpguy@acs.ucalgary.ca>
 #               1998 Martin Schulze <joey@infodrom.north.de>
-#               1999 Raphaël Hertzog <rhertzog@hrnet.fr>
+#               1999,2009 Raphaël Hertzog <hertzog@debian.org>
 #
 # This program has been distributed under the terms of the GNU GPL.
 
