Update German translation of manual pages
Update to 1642t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-09-06 15:41+0200\n"
+"PO-Revision-Date: 2009-09-27 05:44+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3637,6 +3637,15 @@ msgid ""
 "front-ends might call dpkg several times per invokation, which might run the "
 "hooks more times than expected."
 msgstr ""
+"Setzt einen Aufruf-Hook I<Befehl>, der via »sh -c« vor oder nach dem Dpkg-"
+"Aufruf der Dpkg-Aktionen I<unpack>, I<configure>, I<install>, "
+"I<triggers-only>, I<remove> und I<purge> ausgeführt wird. Diese Option kann "
+"mehrfach angegeben werden. Die Reihenfolge der Optionen wird erhalten, wobei "
+"Einträge aus den Konfigurationsdateien Vorrang einnehmen. Die "
+"Umgebungsvariable B<DPKG_HOOK_ACTION> wird für die Hooks auf die aktuelle "
+"Dpkg-Aktion gesetzt. Hinweis: Oberflächen könnten Dpkg mehrere Male pro "
+"Ausführung aufrufen, wodurch die Hooks öfter als erwartet ausgeführt werden "
+"könnten."
 
 #. type: TP
 #: dpkg.1:522
