Fix typo in man page: s/invokation/invocation/

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-09-27 05:44+0200\n"
+"PO-Revision-Date: 2009-09-27 05:48+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3634,7 +3634,7 @@ msgid ""
 "times. The order the options are specified is preserved, with the ones from "
 "the configuration files taking precedence.  The environment variable "
 "B<DPKG_HOOK_ACTION> is set for the hooks to the current dpkg action. Note: "
-"front-ends might call dpkg several times per invokation, which might run the "
+"front-ends might call dpkg several times per invocation, which might run the "
 "hooks more times than expected."
 msgstr ""
 "Setzt einen Aufruf-Hook I<Befehl>, der via »sh -c« vor oder nach dem Dpkg-"
