--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -517,7 +517,7 @@ option can be specified multiple times. The order the options are specified
 is preserved, with the ones from the configuration files taking precedence.
 The environment variable \fBDPKG_HOOK_ACTION\fP is set for the hooks to the
 current dpkg action. Note: front-ends might call dpkg several times per
-invokation, which might run the hooks more times than expected.
+invocation, which might run the hooks more times than expected.
 .RE
 .TP
 \fB\-\-status\-fd \fR\fIn\fR
