--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-08-14 17:19+0200\n"
+"PO-Revision-Date: 2009-09-27 05:47+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3651,7 +3651,7 @@ msgid ""
 "times. The order the options are specified is preserved, with the ones from "
 "the configuration files taking precedence.  The environment variable "
 "B<DPKG_HOOK_ACTION> is set for the hooks to the current dpkg action. Note: "
-"front-ends might call dpkg several times per invokation, which might run the "
+"front-ends might call dpkg several times per invocation, which might run the "
 "hooks more times than expected."
 msgstr ""
 
