--- a/man/po/hu.po
+++ b/man/po/hu.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2008-11-18 13:32+0200\n"
+"PO-Revision-Date: 2009-09-27 05:47+0200\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
@@ -3027,7 +3027,7 @@ msgid ""
 "times. The order the options are specified is preserved, with the ones from "
 "the configuration files taking precedence.  The environment variable "
 "B<DPKG_HOOK_ACTION> is set for the hooks to the current dpkg action. Note: "
-"front-ends might call dpkg several times per invokation, which might run the "
+"front-ends might call dpkg several times per invocation, which might run the "
 "hooks more times than expected."
 msgstr ""
 
