--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14.24\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-02-04 09:55+0100\n"
+"PO-Revision-Date: 2009-09-27 05:47+0200\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3668,7 +3668,7 @@ msgid ""
 "times. The order the options are specified is preserved, with the ones from "
 "the configuration files taking precedence.  The environment variable "
 "B<DPKG_HOOK_ACTION> is set for the hooks to the current dpkg action. Note: "
-"front-ends might call dpkg several times per invokation, which might run the "
+"front-ends might call dpkg several times per invocation, which might run the "
 "hooks more times than expected."
 msgstr ""
 
