--- a/man/po/ru.po
+++ b/man/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2008-05-13 04:41+0300\n"
+"PO-Revision-Date: 2009-09-27 05:47+0200\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3312,7 +3312,7 @@ msgid ""
 "times. The order the options are specified is preserved, with the ones from "
 "the configuration files taking precedence.  The environment variable "
 "B<DPKG_HOOK_ACTION> is set for the hooks to the current dpkg action. Note: "
-"front-ends might call dpkg several times per invokation, which might run the "
+"front-ends might call dpkg several times per invocation, which might run the "
 "hooks more times than expected."
 msgstr ""
 
