--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * German (Sven Joachim).
   * Czech (Miroslav Kure).
+  * Polish (Wiktor Wandachowicz). Closes: #548541
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
