--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
+  * Polish (Wiktor Wandachowicz). Closes: #548541
 
  -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200
 
