Update Polish translation of dselect
Update to 230t

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * German (Sven Joachim).
   * Czech (Miroslav Kure).
+  * Polish (Wiktor Wandachowicz). Closes: #548541
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
