dpkg-trigger: On --help print the default admindir
Instead of the one passed on the command line.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     finishing fatally.
   * Update md5 file paths in debian/copyright.
     Thanks to Jonathan Nieder <jrnieder@gmail.com>.
+  * On ‘dpkg-trigger --help’ print the default admindir instead of the one
+    passed on the command line.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
