--- a/po/it.po
+++ b/po/it.po
@@ -25,12 +25,12 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:04+0200\n"
-"PO-Revision-Date: 2009-07-10 23:26+0200\n"
+"PO-Revision-Date: 2009-09-27 18:31+0200\n"
 "Last-Translator: Milo Casagrande <milo@ubuntu.com>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8 bit\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: lib/dpkg/buffer.c:114
 #, c-format
@@ -624,9 +624,9 @@ msgid "failed to create pipe"
 msgstr "creazione della pipe non riuscita"
 
 #: lib/dpkg/mlib.c:124
-#, fuzzy, c-format
+#, c-format
 msgid "error writing to '%s'"
-msgstr "errore nello scrivere \"%s\""
+msgstr "errore nello scrivere su \"%s\""
 
 #: lib/dpkg/mlib.c:131
 #, c-format
@@ -639,9 +639,9 @@ msgid "unable to set close-on-exec flag for %.250s"
 msgstr "impossibile impostare il flag close-on-exec per %.250s"
 
 #: lib/dpkg/myopt.c:62
-#, fuzzy, c-format
+#, c-format
 msgid "configuration error: %s:%d: %s"
-msgstr "errore di configurazione: \"%s\" richiede un valore"
+msgstr "errore di configurazione: %s:%d:%s"
 
 #: lib/dpkg/myopt.c:74
 #, c-format
@@ -653,22 +653,22 @@ msgstr ""
 #: lib/dpkg/myopt.c:101
 #, c-format
 msgid "unbalanced quotes in '%s'"
-msgstr ""
+msgstr "virgolette non bilanciate in \"%s\""
 
 #: lib/dpkg/myopt.c:117
-#, fuzzy, c-format
+#, c-format
 msgid "unknown option '%s'"
 msgstr "opzione \"%s\" sconosciuta"
 
 #: lib/dpkg/myopt.c:121
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' needs a value"
-msgstr "l'opzione --%s richiede un valore"
+msgstr "\"%s\" richiede un valore"
 
 #: lib/dpkg/myopt.c:127
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' does not take a value"
-msgstr "l'opzione --%s non accetta alcun valore"
+msgstr "\"%s\" non accetta alcun valore"
 
 #: lib/dpkg/myopt.c:132
 #, c-format
@@ -681,9 +681,9 @@ msgid "error closing configuration file `%.255s'"
 msgstr "errore nel chiudere il file di configurazione \"%.255s\""
 
 #: lib/dpkg/myopt.c:170
-#, fuzzy, c-format
+#, c-format
 msgid "error opening configuration directory '%s'"
-msgstr "errore nel chiudere il file di configurazione \"%.255s\""
+msgstr "errore nell'aprire la directory di configurazione \"%s\""
 
 #: lib/dpkg/myopt.c:230
 #, c-format
@@ -1287,19 +1287,20 @@ msgid "Replaced by files in installed package %s ...\n"
 msgstr "Sostituiti dai file nel pacchetto %s installato...\n"
 
 #: src/archives.c:599
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite directory '%.250s' in package %.250s %.250s with "
 "nondirectory"
 msgstr ""
-"tentata sovrascrittura della directory \"%.250s\" nel pacchetto %.250s con "
-"un oggetto non-directory"
+"tentata sovrascrittura della directory \"%.250s\" nel pacchetto %.250s "
+"%.250s con un oggetto non-directory"
 
 #: src/archives.c:611
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite '%.250s', which is also in package %.250s %.250s"
 msgstr ""
-"tentata sovrascrittura di \"%.250s\" presente anche nel pacchetto %.250s"
+"tentata sovrascrittura di \"%.250s\" presente anche nel pacchetto %.250s "
+"%.250s"
 
 #: src/archives.c:684
 #, c-format
@@ -1573,13 +1574,13 @@ msgstr "--%s richiede almeno un archivio di pacchetto come argomento"
 #: dpkg-split/info.c:241 dpkg-split/main.c:56 dpkg-split/main.c:93
 #: dpkg-split/queue.c:125 dpkg-split/queue.c:245
 msgid "<standard output>"
-msgstr ""
+msgstr "<standard output>"
 
 #: src/archives.c:1222 src/packages.c:269 src/query.c:185 src/query.c:277
 #: src/query.c:378 src/query.c:434 src/select.c:81 dpkg-split/main.c:198
 #: dpkg-split/queue.c:192
 msgid "<standard error>"
-msgstr ""
+msgstr "<standard error>"
 
 #: src/archives.c:1263
 #, c-format
@@ -2276,9 +2277,9 @@ msgid "--compare-versions bad relation"
 msgstr "--compare-versions relazione errata"
 
 #: src/enquiry.c:447 src/enquiry.c:454
-#, fuzzy, c-format
+#, c-format
 msgid "version '%s' has bad syntax: %s"
-msgstr "dplg: sintassi della versione \"%s\" errata: %s\n"
+msgstr "sintassi della versione \"%s\" errata: %s"
 
 #: src/errors.c:61
 #, c-format
@@ -3418,18 +3419,16 @@ msgstr ""
 
 # (ndt) idee sul significato?
 #: src/query.c:115
-#, fuzzy
 msgid ""
 "Desired=Unknown/Install/Remove/Purge/Hold\n"
 "| Status=Not/Inst/Cfg-files/Unpacked/Failed-cfg/Half-inst/trig-aWait/Trig-"
 "pend\n"
 "|/ Err?=(none)/Reinst-required (Status,Err: uppercase=bad)\n"
 msgstr ""
-"Desiderato=sconosciUto/Installato/Rimosso/P:eliminato/H:bloccato\n"
-"| Stato=Non/Installato/file Config./U:estratto./conf. Fallita/H:inst."
-"parzial.\n"
-"|/ Err?=(nessuno)/H:bloc./necess.Reinst./X=entrambi (Stato,Err: maiusc."
-"=grave)\n"
+"Desiderato=Unknown/Install/Remove/Purge/Hold\n"
+"| Stato=Not/Inst/Cfg-files/Unpacked/Failed-cfg/Half-inst/trig-aWait/Trig-"
+"pend\n"
+"|/ Err?=(nessuno)/Reinst-required (Stato,Err: maiuscolo=grave)\n"
 
 #: src/query.c:119
 msgid "Name"
@@ -3525,7 +3524,7 @@ msgstr ""
 #: src/query.c:539
 #, c-format
 msgid "control file contains %c"
-msgstr ""
+msgstr "il file di controllo contiene %c"
 
 #: src/query.c:559
 #, c-format
@@ -3535,7 +3534,7 @@ msgstr ""
 "pacchetti\n"
 
 #: src/query.c:576
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Commands:\n"
 "  -s|--status <package> ...        Display package status details.\n"
@@ -3557,6 +3556,9 @@ msgstr ""
 "  -W|--show <modello> ...          Mostra informazioni sui pacchetti\n"
 "  -S|--search <modello> ...        Trova i pacchetti a cui appartengono i "
 "file\n"
+"  -c|--control-path <pacchetto> [<file>]\n"
+"                                    Stampa il percorso del file di controllo "
+"del pacchetto\n"
 "\n"
 
 #: src/query.c:594
@@ -3986,6 +3988,8 @@ msgstr "Le informazioni riguardo %d pacchetti sono state aggiornate.\n"
 msgid ""
 "obsolete '--%s' option, unavailable packages are automatically cleaned up."
 msgstr ""
+"opzione \"--%s\" obsoleta, i pacchetti non disponibili sono rimossi "
+"automaticamente."
 
 #: dpkg-deb/build.c:101
 #, c-format
@@ -4139,9 +4143,9 @@ msgid "error opening conffiles file"
 msgstr "errore nell'aprire il file contenente i file di configurazione"
 
 #: dpkg-deb/build.c:355
-#, fuzzy, c-format
+#, c-format
 msgid "ignoring %d warnings about the control file(s)\n"
-msgstr "dpkg-dev: %d avvisi relativi ai file di controllo vengono ignorati\n"
+msgstr "%d avvisi relativi ai file di controllo vengono ignorati\n"
 
 #: dpkg-deb/build.c:364
 #, c-format
@@ -5654,7 +5658,7 @@ msgstr "nessuna alternativa per %s."
 #: scripts/update-alternatives.pl:261
 #, perl-format
 msgid "%s is dangling, it will be updated with best choice."
-msgstr ""
+msgstr "%s è in attesa, verrà aggiornato tramite una scelta ottimale."
 
 #: scripts/update-alternatives.pl:265
 #, perl-format
