debian/copyright: Update path to MD5 code
The lib/ directory was renamed to lib/dpkg/ in commit 01d0532
(Move libraries to subdirectories under lib/, 2009-07-15).
Update the copyright file accordingly.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Fix small leak when parsing ‘--ignore-depends’ option values.
   * When start-stop-daemon fails to set the io scheduling warn instead of
     finishing fatally.
+  * Update md5 file paths in debian/copyright.
+    Thanks to Jonathan Nieder <jrnieder@gmail.com>.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
