--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * On ‘dpkg-trigger --help’ print the default admindir instead of the one
     passed on the command line.
   * Abort on configure if the required C99 extensions are not supported.
+  * Add C coding style document.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
