libdpkg: Fix varbufprintf to not grow indefinitely
Use the C99 semantics for vsnprintf to get the final formatted string
size, and then call it again to do the actual work. Use varbuf_grow with
the know size, instead of always calling varbufextend, regardles of
needing to extend the buffer, which was making it grow indefinitely.

This also should speed it up a bit by not requiring to call vsnprintf
several times depending on the length of the final string. Only two
calls are required now, always.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Make dpkg as strict as dpkg-statoverride on input when validating the
     parsed data from the statdb.
   * Rewrite dpkg-statoverride in C.
+  * Use C99 snprintf function family semantics to avoid having to call them
+    in a loop to grow the varbuf buffer. This should reduce memory usage and
+    be slightly faster on varbufprintf calls.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
