dpkg-scanpackages/dpkg-scansources: support compressed override files
This feature is supported in the dpkg-scanpackages implementation provided
by dpkg-multicd.

--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -60,7 +60,7 @@ this string.
 .PP
 .I overridefile
 is the name of a file to read which contains information about how the
-package fits into the distribution; see
+package fits into the distribution (it can be a compressed file); see
 .BR deb\-override (5).
 .PP
 .I pathprefix
@@ -79,7 +79,8 @@ Scan for *.\fItype\fP packages, instead of *.deb.
 \fBObsolete\fP alias for \fB-tudeb\fP.
 .TP
 .BR \-e ", " \-\-extra\-override " \fIfile\fP"
-Scan \fIfile\fP to find supplementary overrides. See
+Scan \fIfile\fP to find supplementary overrides (the file can be
+compressed). See
 .BR deb\-extra\-override (5)
 for more information on its format.
 .TP
