Integrate dpkg-multicd into dselect
The `multicd' package was initially written by Heiko Schlittermann
<heiko@lotte.sax.de> based on builtin access methods written by Ian
Jackson <ian@chiark.greenend.org.uk>.  The final packaging as well as
cleanups were made by Martin Schulze <joey@infodrom.north.de> who also
put this package together for the slink release (Debian GNU/Linux
2.1).

This commit includes the raw files as provided in version 0.21 of dpkg-multicd
(except for a few whitespaces cleanups).

The dpkg-scanpackages fork has been left out since the required features
have been merged in the official dpkg-scanpackages. Closes: #516631

--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * dpkg-scanpackages now supports a new --medium option as needed to
     generate Packages.cd file for consumption by the multicd dselect access
     method. Closes: #402527
+  * Integrate dpkg-multicd into dselect. Add the required Replaces and
+    Conflicts. The dpkg-scanpackages fork is dropped. Closes: #516631
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
