--- a/dselect/methods/multicd/install
+++ b/dselect/methods/multicd/install
@@ -1,5 +1,21 @@
 #!/bin/sh
 
+# Copyright (C) 1995-98 Ian Jackson <ian@chiark.greenend.org.uk>
+# Copyright (C) 1998 Heiko Schlittermann <heiko@lotte.sax.de>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; version 2 dated June, 1991.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program;  if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111, USA.
+
 set -e
 vardir="$1"
 method=$2
