--- a/dselect/methods/multicd/install
+++ b/dselect/methods/multicd/install
@@ -29,7 +29,7 @@ cd "$vardir/methods/$method"
 
 #debug() { echo "DEBUG: $@"; }
 debug() { true; }
-iarch=`dpkg --print-installation-architecture`
+iarch=`dpkg --print-architecture`
 ismulti() { test -e "$1/.disk/info" || test -e "$1$2/.disk/info"; }
 
 # 1/ mountpoint
