build: Fix DPKG_CHECK_DEFINE to properly check for dpkg_cv_define_$1
The macro was checking for the dpkg_cv_define variable, which implied
always doing an AC_DEFINE to 0.

As a consequence now start-stop-deaemon will use TIOCNOTTY when
available.

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     memory usage when handling lots of symlinks, and be slightly faster.
   * Rework varbuf api to avoid increasing buffers indefinitely when adding
     content to them, regardless of space being already available.
+  * Fix build macros to allow start-stop-deaemon to use TIOCNOTTY.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
