doc: Add doxygen support
The code should start getting switched to document using JavaDoc
style comments, at least for public declarations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Fix build macros to allow start-stop-deaemon to use TIOCNOTTY.
   * Generate the autoconf version from git to make it easier to see when a
     snapshot version is being used.
+  * Add infrastructure for doxygen, for now not installed anywhere.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
