Minor fixes in the German man page translation

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-10-03 10:25+0200\n"
+"PO-Revision-Date: 2009-10-09 18:09+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2435,7 +2435,7 @@ msgid ""
 "A package marked to be on B<hold> is not handled by B<dpkg>, unless forced "
 "to do that with option B<--force-hold>."
 msgstr ""
-"Ein Paket das mit B<halten> markiert ist, wird von B<dpkg> nicht behandelt, "
+"Ein Paket, das mit B<halten> markiert ist, wird von B<dpkg> nicht behandelt, "
 "es sei denn Sie erzwingen dies mit der Option B<--force-hold>."
 
 #. type: TP
@@ -12791,7 +12791,7 @@ msgstr ""
 "Falls Sie bestimmte Einstellungen aus Versehen vornehmen und alle Auswahlen "
 "so zurücksetzen wollen, dass diese den bereits auf dem System installierten "
 "Paketen entsprechen, dann drücken Sie die Taste B<»C«>. Dies ähnelt etwas der "
-"Verwendung des Befehls »unhold«, angewendet auf alle Pakete, bietet aber "
+"Verwendung des Befehls Loslassen, angewendet auf alle Pakete, bietet aber "
 "einen etwas deutlicheren Panikknopf, falls der Benutzer aus Versehen die "
 "B<Eingabetaste> gedrückt hat."
 
