Update Swedish translation.
dselect/po/sv.po: Update to 280t0f0u.
man/po/sv.po: Update to 1642t0f0u.
po/sv.po: Update to 967t0f0u.
scripts/po/sv.po: Update to 471t0f0u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,26 +55,30 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Fix bashisms in dselect multicd access method. Closes: #530070
 
   [ Updated dpkg translations ]
-  * German (Sven Joachim).
   * Czech (Miroslav Kure).
-  * Polish (Wiktor Wandachowicz). Closes: #548541
+  * German (Sven Joachim).
   * Italian (Milo Casagrande). Closes: #548615
+  * Polish (Wiktor Wandachowicz). Closes: #548541
+  * Swedish (Peter Krefting).
 
   [ Updated dselect translations ]
-  * German (Sven Joachim).
   * Czech (Miroslav Kure).
+  * German (Sven Joachim).
   * Polish (Wiktor Wandachowicz). Closes: #548541
+  * Swedish (Peter Krefting).
 
   [ Updated man page translations ]
-  * German (Helge Kreutzmann).
   * French translation error fixed (Christian Perrier)
     Thanks to Pietro Battiston for spotting it
     Closes: #545446
+  * German (Helge Kreutzmann).
   * Polish (Wiktor Wandachowicz). Closes: #548541
+  * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
   * Polish (Wiktor Wandachowicz). Closes: #548541
+  * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200
 
