--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-10-09 18:09+0200\n"
+"PO-Revision-Date: 2009-10-14 18:50+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1382,7 +1382,7 @@ msgstr ""
 "Während der Großteil der Informationen über ein binäres oder Quellpaket in "
 "der Datei control/.dsc gefunden werden kann, kann alles davon überschrieben "
 "werden, wenn es in die Dateien Packages/Sources exportiert wird. Die Zusatz-"
-"override-Datei entält diese »Überschreibungen« (engl. overrides)."
+"override-Datei enthält diese »Überschreibungen« (engl. overrides)."
 
 #. type: Plain text
 #: deb-extra-override.5:16
