man: Fix typo in Swedish translation making build to fail
Introduced in commit af22e669c65db01eec9d9699d98841b08e7bbc5b.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-10-14 09:20+0100\n"
+"PO-Revision-Date: 2009-10-16 02:39+0200\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1371,7 +1371,7 @@ msgstr ""
 #: deb-extra-override.5:21
 #| msgid "B<-D>I<field>B<=>I<value>"
 msgid "I<package> I<field-name> I<value>"
-msgstr "I<paket> I<fältnamn I<värde>"
+msgstr "I<paket> I<fältnamn> I<värde>"
 
 #. type: Plain text
 #: deb-extra-override.5:25
