--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Integrate dpkg-multicd into dselect. Add the required Replaces and
     Conflicts. The dpkg-scanpackages fork is dropped. Closes: #516631
   * Fix bashisms in dselect multicd access method. Closes: #530070
+  * Add support of "xz" compression method for source packages. Add dependency
+    dpkg-dev → xz-utils to ensure xz and unxz are available.
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
