--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-10-14 18:50+0200\n"
+"PO-Revision-Date: 2009-10-16 19:09+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -9751,6 +9751,22 @@ msgstr ""
 "Dateien. Unterstützte Werte sind I<gzip>, I<bzip2> und I<lzma>. I<gzip> ist "
 "voreingestellt."
 
+#: dpkg-source.1:120
+#FOOBAR
+msgid ""
+"Specify the compression to use for created files (tarballs and diffs).  Note "
+"that this option will not cause existing tarballs to be recompressed, it "
+"only affects new files. Supported values are: I<gzip>, I<bzip2>, I<lzma> and "
+"I<xz>.  I<gzip> is the default. I<xz> is only supported since dpkg-dev "
+"1.15.5."
+msgstr ""
+"Gibt die Komprimierung an, die für die angelegte Dateien (Tarbälle und "
+"Diffs) verwendet wird. Beachten Sie, dass diese Option nicht dazu führt, "
+"dass existierende Tarbälle rekomprimiert werden, sie betrifft nur neue "
+"Dateien. Unterstützte Werte sind I<gzip>, I<bzip2>, I<lzma> und I<xz>. "
+"I<gzip> ist voreingestellt. I<xz> wird erst seit Dpkg-dev 1.15.5 unterstützt."
+
+
 #. type: TP
 #: dpkg-source.1:119
 #, no-wrap
@@ -10312,6 +10328,22 @@ msgid ""
 msgstr ""
 "Ein Quellpaket in diesem Format enthält mindestens einen Original-Tarball "
 "(B<.orig.tar.>I<erw>, wobei I<erw> B<gz>, B<bz2> und B<lzma> sein kann) und "
+"einen Debian-Tarball (B<.debian.tar.>I<erw>). Es kann auch zusätzliche "
+"Original-Tarbälle (B<.orig->I<Komponente>B<.tar.>I<erw>)) enthalten. "
+"I<Komponente> kann nur alphanumerische Zeichen und Gedankenstriche (»-«) "
+"enthalten."
+
+#: dpkg-source.1:359
+msgid ""
+"A source package in this format contains at least an original tarball (B<."
+"orig.tar.>I<ext> where I<ext> can be B<gz>, B<bz2>, B<lzma> and B<xz>) and a "
+"debian tarball (B<.debian.tar.>I<ext>). It can also contain additional "
+"original tarballs (B<.orig->I<component>B<.tar.>I<ext>).  I<component> can "
+"only contain alphanumeric characters and dashes (\"-\")."
+msgstr ""
+"Ein Quellpaket in diesem Format enthält mindestens einen Original-Tarball "
+"(B<.orig.tar.>I<erw>, wobei I<erw> B<gz>, B<bz2>, B<lzma> und B<xz> sein "
+"kann) und "
 "einen Debian-Tarball (B<.debian.tar.>I<erw>). Es kann auch zusätzliche "
 "Original-Tarbälle (B<.orig->I<Komponente>B<.tar.>I<erw>)) enthalten. "
 "I<Komponente> kann nur alphanumerische Zeichen und Gedankenstriche (»-«) "
