--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-10-16 19:09+0200\n"
+"PO-Revision-Date: 2009-10-18 13:11+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -8527,7 +8527,7 @@ msgid ""
 "required if you want to generate B<Packages.cd> files for use by the multicd "
 "access method of dselect."
 msgstr ""
-"Füge ein Feld X-Medium hinzu, dass den Wert von I<ID-Zeichenkette> enthält. "
+"Füge ein Feld X-Medium hinzu, das den Wert von I<ID-Zeichenkette> enthält. "
 "Dieses Feld wird benötigt, falls Sie die Dateien B<Packages.cd> für den "
 "Einsatz mit der Multicd-Zugriffsmethode von Dselect erstellen wollen."
 
@@ -8613,7 +8613,7 @@ msgstr ""
 "in den I<.dsc>-Dateien hinwegzusetzen. Diese Datei kann komprimiert sein. "
 "Lesen Sie B<dpkg-scanpackages>(1) für das Format dieser Datei. \\s-1Beachten "
 "Sie\\s0: Da die override-Datei nach Binär- und nicht Quellpaketen indiziert "
-"wird, gibt es ein hier kleines Problem. Die aktuelle Implementierung "
+"wird, gibt es hier ein kleines Problem. Die aktuelle Implementierung "
 "verwendet die höchste Priorität aller von einer I<.dsc>-Datei erzeugten "
 "Binärpakete für die Priorität des Quellpakets, und den Inhalt für das "
 "Hinwegsetzen über die Betreuer-Information aus dem Eintrag für das erste in "
