--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.15.4.1) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 19 Oct 2009 15:04:40 +0200
+
 dpkg (1.15.4) unstable; urgency=low
 
   [ Guillem Jover ]
