--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-dpkg (1.15.4.1) UNRELEASED; urgency=low
+dpkg (1.15.4.1) unstable; urgency=medium
 
   * Do not mark any package as unseen in dselect. This is a workaround
     until it learns how to store such information again. Closes: #545366
 
- -- Guillem Jover <guillem@debian.org>  Mon, 19 Oct 2009 15:04:40 +0200
+ -- Guillem Jover <guillem@debian.org>  Mon, 19 Oct 2009 15:15:17 +0200
 
 dpkg (1.15.4) unstable; urgency=low
 
