--- a/po/fr.po
+++ b/po/fr.po
@@ -13,14 +13,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:04+0200\n"
-"PO-Revision-Date: 2009-06-29 18:51+0200\n"
+"PO-Revision-Date: 2009-10-24 09:07+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Lokalize 0.3\n"
+"X-Generator: Lokalize 1.0\n"
 
 #: lib/dpkg/buffer.c:114
 #, c-format
@@ -354,8 +354,7 @@ msgstr "champ « %s » non autorisé dans le fichier d'états"
 #: lib/dpkg/fields.c:106
 #, c-format
 msgid "too many values in file details field `%s' (compared to others)"
-msgstr ""
-"trop de valeurs dans le champ du fichier « %s » (par rapport aux autres)"
+msgstr "trop de valeurs dans le champ du fichier « %s » (par rapport aux autres)"
 
 #: lib/dpkg/fields.c:120
 #, c-format
@@ -423,8 +422,7 @@ msgstr "répertoire racine ou nul déclaré comme un « conffile »"
 
 #: lib/dpkg/fields.c:337
 #, c-format
-msgid ""
-"`%s' field, missing package name, or garbage where package name expected"
+msgid "`%s' field, missing package name, or garbage where package name expected"
 msgstr ""
 "champ « %s », nom de paquet manquant, ou absurdités à la place d'un nom de "
 "paquet"
@@ -604,8 +602,7 @@ msgstr "échec de dup sur fd %d"
 msgid "failed to create pipe"
 msgstr "impossible de créer un tube"
 
-#: lib/dpkg/mlib.c:124
-#, fuzzy, c-format
+#: lib/dpkg/mlib.c:124, c-format
 msgid "error writing to '%s'"
 msgstr "erreur lors de l'écriture de « %s »"
 
@@ -619,10 +616,9 @@ msgstr "impossible de lire les drapeaux de descripteur de fichier pour %.250s"
 msgid "unable to set close-on-exec flag for %.250s"
 msgstr "impossible de positionner le drapeau « close-on-exec » pour %.250s"
 
-#: lib/dpkg/myopt.c:62
-#, fuzzy, c-format
+#: lib/dpkg/myopt.c:62, c-format
 msgid "configuration error: %s:%d: %s"
-msgstr "erreur de configuration : %s a besoin d'une valeur"
+msgstr "erreur de configuration : %s:%d : %s"
 
 #: lib/dpkg/myopt.c:74
 #, c-format
@@ -632,22 +628,19 @@ msgstr "échec d'ouverture du fichier de configuration %.255s en lecture : %s
 #: lib/dpkg/myopt.c:101
 #, c-format
 msgid "unbalanced quotes in '%s'"
-msgstr ""
+msgstr "guillemets non appairés dans « %s »"
 
-#: lib/dpkg/myopt.c:117
-#, fuzzy, c-format
+#: lib/dpkg/myopt.c:117, c-format
 msgid "unknown option '%s'"
 msgstr "option « %s » inconnue"
 
-#: lib/dpkg/myopt.c:121
-#, fuzzy, c-format
+#: lib/dpkg/myopt.c:121, c-format
 msgid "'%s' needs a value"
-msgstr "l'option --%s prend une valeur en paramètre"
+msgstr "« %s » a besoin d'une valeur"
 
-#: lib/dpkg/myopt.c:127
-#, fuzzy, c-format
+#: lib/dpkg/myopt.c:127, c-format
 msgid "'%s' does not take a value"
-msgstr "l'option --%s ne prend pas de valeur en paramètre"
+msgstr "« %s » n'utilise pas de valeur"
 
 #: lib/dpkg/myopt.c:132
 #, c-format
@@ -659,10 +652,9 @@ msgstr "erreur de lecture sur le fichier de configuration « %.255s »"
 msgid "error closing configuration file `%.255s'"
 msgstr "erreur lors de la fermeture du fichier de configuration « %.255s »"
 
-#: lib/dpkg/myopt.c:170
-#, fuzzy, c-format
+#: lib/dpkg/myopt.c:170, c-format
 msgid "error opening configuration directory '%s'"
-msgstr "erreur lors de la fermeture du fichier de configuration « %.255s »"
+msgstr "erreur lors de l'ouverture du répertoire de configuration « %s »"
 
 #: lib/dpkg/myopt.c:230
 #, c-format
@@ -743,8 +735,7 @@ msgstr "le nom de champ « %.*s » doit être suivi de deux points (:)"
 #: lib/dpkg/parse.c:183
 #, c-format
 msgid "EOF before value of field `%.*s' (missing final newline)"
-msgstr ""
-"EOF avant la valeur du champ « %.*s » (il manque le saut de ligne final)"
+msgstr "EOF avant la valeur du champ « %.*s » (il manque le saut de ligne final)"
 
 #: lib/dpkg/parse.c:187
 #, c-format
@@ -1010,8 +1001,7 @@ msgstr ""
 #: lib/dpkg/trigdeferred.l:195
 #, c-format
 msgid "unable to close new triggers deferred file `%.250s'"
-msgstr ""
-"impossible de fermer le nouveau fichier des actions différées « %.255s »"
+msgstr "impossible de fermer le nouveau fichier des actions différées « %.255s »"
 
 #: lib/dpkg/trigdeferred.l:199
 #, c-format
@@ -1202,8 +1192,7 @@ msgstr "erreur de lecture du tube de dpkg-deb"
 #: src/archives.c:257
 #, c-format
 msgid "skipped unpacking file '%.255s' (replaced or excluded?)"
-msgstr ""
-"omission de la décompression du fichier « %.255s » (remplacé ou exclu ?)"
+msgstr "omission de la décompression du fichier « %.255s » (remplacé ou exclu ?)"
 
 #: src/archives.c:298
 #, c-format
@@ -1287,20 +1276,20 @@ msgstr "Remplacement de fichiers dans l'ancien paquet %s ...\n"
 msgid "Replaced by files in installed package %s ...\n"
 msgstr "Remplacés par des fichiers du paquet %s déjà installé...\n"
 
-#: src/archives.c:599
-#, fuzzy, c-format
+#: src/archives.c:599, c-format
 msgid ""
 "trying to overwrite directory '%.250s' in package %.250s %.250s with "
 "nondirectory"
 msgstr ""
-"tentative de remplacement du répertoire « %.250s » dans le paquet %.250s avec "
+"tentative de remplacement du répertoire « %.250s » dans le paquet %.250s %."
+"250s avec "
 "un élément de type différent"
 
-#: src/archives.c:611
-#, fuzzy, c-format
+#: src/archives.c:611, c-format
 msgid "trying to overwrite '%.250s', which is also in package %.250s %.250s"
 msgstr ""
-"tentative de remplacement de « %.250s », qui appartient aussi au paquet %.250s"
+"tentative de remplacement de « %.250s », qui appartient aussi au paquet %.250s "
+"%.250s"
 
 #: src/archives.c:684
 #, c-format
@@ -1433,8 +1422,7 @@ msgstr "l'installation de %.250s"
 #, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr ""
-"dpkg : tentative de déconfiguration de %s, qui serait cassé par %s ...\n"
+msgstr "dpkg : tentative de déconfiguration de %s, qui serait cassé par %s ...\n"
 
 #: src/archives.c:953
 #, c-format
@@ -1498,8 +1486,7 @@ msgstr ""
 #: src/archives.c:1057
 #, c-format
 msgid "dpkg: package %s requires reinstallation, will not remove.\n"
-msgstr ""
-"dpkg : le paquet %s requiert une réinstallation, suppression annulée.\n"
+msgstr "dpkg : le paquet %s requiert une réinstallation, suppression annulée.\n"
 
 #: src/archives.c:1064
 #, c-format
@@ -1566,13 +1553,13 @@ msgstr "--%s a besoin d'au moins un fichier archive de paquet comme paramètre"
 #: dpkg-split/info.c:241 dpkg-split/main.c:56 dpkg-split/main.c:93
 #: dpkg-split/queue.c:125 dpkg-split/queue.c:245
 msgid "<standard output>"
-msgstr ""
+msgstr "<sortie standard>"
 
 #: src/archives.c:1222 src/packages.c:269 src/query.c:185 src/query.c:277
 #: src/query.c:378 src/query.c:434 src/select.c:81 dpkg-split/main.c:198
 #: dpkg-split/queue.c:192
 msgid "<standard error>"
-msgstr ""
+msgstr "<erreur standard>"
 
 #: src/archives.c:1263
 #, c-format
@@ -1735,8 +1722,7 @@ msgstr "%s :échec de la liaison de « %.250s » à « %.250s » : %s"
 #: src/configure.c:293
 #, c-format
 msgid "Installing new version of config file %s ...\n"
-msgstr ""
-"Installation de la nouvelle version du fichier de configuration %s ...\n"
+msgstr "Installation de la nouvelle version du fichier de configuration %s ...\n"
 
 #: src/configure.c:299
 #, c-format
@@ -2243,8 +2229,7 @@ msgstr ""
 #: src/enquiry.c:366
 #, c-format
 msgid "cannot satisfy pre-dependencies for %.250s (wanted due to %.250s)"
-msgstr ""
-"ne peut satisfaire les pré-dépendances pour %.250s (réclamé par %.250s)"
+msgstr "ne peut satisfaire les pré-dépendances pour %.250s (réclamé par %.250s)"
 
 #: src/enquiry.c:396
 #, c-format
@@ -2252,8 +2237,7 @@ msgid "obsolete option '--%s', please use '--%s' instead."
 msgstr "option obsolète « --%s », veuillez utiliser « --%s » à la place."
 
 #: src/enquiry.c:437
-msgid ""
-"--compare-versions takes three arguments: <version> <relation> <version>"
+msgid "--compare-versions takes three arguments: <version> <relation> <version>"
 msgstr ""
 "--compare-versions prend trois paramètres : <version> <relation> <version>"
 
@@ -2261,10 +2245,9 @@ msgstr ""
 msgid "--compare-versions bad relation"
 msgstr "--compare-versions : mauvaise relation"
 
-#: src/enquiry.c:447 src/enquiry.c:454
-#, fuzzy, c-format
+#: src/enquiry.c:447 src/enquiry.c:454, c-format
 msgid "version '%s' has bad syntax: %s"
-msgstr "dpkg : mauvaise syntaxe de la version « %s » : %s\n"
+msgstr "mauvaise syntaxe de la version « %s » : %s"
 
 #: src/errors.c:61
 #, c-format
@@ -2276,8 +2259,7 @@ msgstr ""
 " %s\n"
 
 #: src/errors.c:68
-msgid ""
-"dpkg: failed to allocate memory for new entry in list of failed packages."
+msgid "dpkg: failed to allocate memory for new entry in list of failed packages."
 msgstr ""
 "dpkg : impossible d'allouer de la mémoire pour une nouvelle entrée dans la "
 "liste des paquets en échec."
@@ -2304,8 +2286,7 @@ msgstr ""
 
 #: src/errors.c:103
 #, c-format
-msgid ""
-"Package %s is on hold, not touching it.  Use --force-hold to override.\n"
+msgid "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
 "Le paquet %s est à garder (on hold), et laissé tel quel. Utilisez --force-"
 "hold pour passer outre.\n"
@@ -3219,8 +3200,7 @@ msgstr "Enregistrement de l'information sur %s de %s.\n"
 #: src/processarc.c:222
 #, c-format
 msgid "package architecture (%s) does not match system (%s)"
-msgstr ""
-"l'architecture du paquet (%s) ne correspond pas à celle du système (%s)"
+msgstr "l'architecture du paquet (%s) ne correspond pas à celle du système (%s)"
 
 #: src/processarc.c:277
 #, c-format
@@ -3407,7 +3387,6 @@ msgid "unable to delete disappearing control info file `%.250s'"
 msgstr "impossible de supprimer le fichier info de contrôle disparu « %.250s »"
 
 #: src/query.c:115
-#, fuzzy
 msgid ""
 "Desired=Unknown/Install/Remove/Purge/Hold\n"
 "| Status=Not/Inst/Cfg-files/Unpacked/Failed-cfg/Half-inst/trig-aWait/Trig-"
@@ -3417,7 +3396,7 @@ msgstr ""
 "Souhait=inconnU/Installé/suppRimé/Purgé/H=à garder\n"
 "| État=Non/Installé/fichier-Config/dépaqUeté/échec-conFig/H=semi-installé/"
 "W=attend-traitement-déclenchements\n"
-"|/ Err?=(aucune)/H=à garder/besoin Réinstallation/X=les deux (État,Err: "
+"|/ Err?=(aucune)/besoin Réinstallation (État,Err: "
 "majuscule=mauvais)\n"
 
 #: src/query.c:119
@@ -3459,8 +3438,7 @@ msgstr "détournement localement en : %s\n"
 
 #: src/query.c:234
 msgid "--search needs at least one file name pattern argument"
-msgstr ""
-"--search a besoin d'au moins un motif de nom de fichier comme paramètre"
+msgstr "--search a besoin d'au moins un motif de nom de fichier comme paramètre"
 
 #: src/query.c:275
 #, c-format
@@ -3515,16 +3493,14 @@ msgstr ""
 #: src/query.c:539
 #, c-format
 msgid "control file contains %c"
-msgstr ""
+msgstr "le fichier de contrôle contient %c"
 
 #: src/query.c:559
 #, c-format
 msgid "Debian `%s' package management program query tool\n"
-msgstr ""
-"Outil « %s » d'interrogation du programme de gestion de paquets Debian\n"
+msgstr "Outil « %s » d'interrogation du programme de gestion de paquets Debian\n"
 
-#: src/query.c:576
-#, fuzzy, c-format
+#: src/query.c:576, c-format
 msgid ""
 "Commands:\n"
 "  -s|--status <package> ...        Display package status details.\n"
@@ -3540,13 +3516,18 @@ msgstr ""
 "Commandes :\n"
 "  -s|--status <nom-de-paquet> ...      affiche l'état du paquet en détail\n"
 "  -p|--print-avail <nom-de-paquet> ... affiche les version disponibles en\n"
-"                                       détail\n"
+"                                       détail.\n"
 "  -L|--listfiles <nom-de-paquet> ...   liste les fichiers « possédés » par\n"
-"                                       le(s) paquet(s)\n"
-"  -l|--list [<motif> ...]              liste le(s) paquet(s) brièvement\n"
+"                                       le(s) paquet(s).\n"
+"  -l|--list [<motif> ...]              liste le(s) paquet(s) brièvement.\n"
 "  -W|--show <motif> ...                montre des informations sur le(s)\n"
-"                                       paquet(s)\n"
+"                                       paquet(s).\n"
 "  -S|--search <motif> ...              cherche le paquet possédant le(s)\n"
+"                                       fichiers.\n"
+"  -c|--control-path <paquet> [<fichier>]\n"
+"                                       affiche le chemin du fichier de "
+"contrôle\n"
+"                                       du paquet.\n"
 "\n"
 
 #: src/query.c:594
@@ -3905,8 +3886,7 @@ msgstr "%s : registre des actions différées (« triggers ») pas encore pré
 
 #: src/trigcmd.c:206
 msgid "takes one argument, the trigger name"
-msgstr ""
-"a besoin d'un seul paramètre , le nom de l'action différée (« trigger »)"
+msgstr "a besoin d'un seul paramètre , le nom de l'action différée (« trigger »)"
 
 #: src/trigcmd.c:211
 msgid ""
@@ -3994,6 +3974,8 @@ msgstr "L'information sur %d paquet(s) a été mise à jour.\n"
 msgid ""
 "obsolete '--%s' option, unavailable packages are automatically cleaned up."
 msgstr ""
+"option « --%s » obsolète : les paquets indisponibles sont nettoyés "
+"automatiquement."
 
 #: dpkg-deb/build.c:101
 #, c-format
@@ -4144,10 +4126,9 @@ msgstr "impossible d'ouvrir le fichier conffile"
 msgid "error opening conffiles file"
 msgstr "erreur lors de l'ouverture du fichier conffiles"
 
-#: dpkg-deb/build.c:355
-#, fuzzy, c-format
+#: dpkg-deb/build.c:355, c-format
 msgid "ignoring %d warnings about the control file(s)\n"
-msgstr "dpkg-deb : %d avertissements sur les fichiers « control » ignorés\n"
+msgstr "%d avertissements sur les fichiers « control » ignorés\n"
 
 #: dpkg-deb/build.c:364
 #, c-format
@@ -4202,8 +4183,7 @@ msgstr "impossible d'exécuter « find »"
 
 #: dpkg-deb/build.c:475 dpkg-deb/build.c:482
 msgid "failed to write filename to tar pipe (data)"
-msgstr ""
-"l'écriture d'un nom de fichier à travers un tube tar (« data ») a échoué"
+msgstr "l'écriture d'un nom de fichier à travers un tube tar (« data ») a échoué"
 
 #: dpkg-deb/build.c:486
 msgid "<compress> from tar -cf"
@@ -4670,8 +4650,7 @@ msgstr "le fichier « %.250s » est corrompu - %.250s manquant"
 #: dpkg-split/info.c:72
 #, c-format
 msgid "file `%.250s' is corrupt - missing newline after %.250s"
-msgstr ""
-"le fichier « %.250s » est corrompu - saut de ligne après %.250s manquant"
+msgstr "le fichier « %.250s » est corrompu - saut de ligne après %.250s manquant"
 
 #: dpkg-split/info.c:96
 msgid "unable to seek back"
@@ -5662,7 +5641,7 @@ msgstr "pas d'alternatives pour %s."
 #: scripts/update-alternatives.pl:261
 #, perl-format
 msgid "%s is dangling, it will be updated with best choice."
-msgstr ""
+msgstr "%s pointe dans le vide et sera mis à jour avec le choix le plus adapté."
 
 #: scripts/update-alternatives.pl:265
 #, perl-format
