--- a/dselect/po/fr.po
+++ b/dselect/po/fr.po
@@ -51,13 +51,13 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-09-06 09:05+0200\n"
-"PO-Revision-Date: 2009-05-24 09:39+0200\n"
+"PO-Revision-Date: 2009-10-24 09:11+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 0.3\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n>1;\n"
 
 #: dselect/basecmds.cc:122
@@ -639,8 +639,7 @@ msgstr ""
 
 #: dselect/helpmsgs.cc:153
 msgid "Display, part 2: list highlight; information display"
-msgstr ""
-"Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
+msgstr "Affichage, 2e partie : surlignage de la liste ; affichage d'informations"
 
 #: dselect/helpmsgs.cc:153
 msgid ""
@@ -912,7 +911,7 @@ msgstr ""
 
 #: dselect/main.cc:176 dselect/main.cc:223
 msgid "<standard output>"
-msgstr ""
+msgstr "<sortie standard>"
 
 #: dselect/main.cc:185
 #, c-format
@@ -1172,9 +1171,8 @@ msgid "Press <enter> to continue.\n"
 msgstr "Appuyez sur <Entrée> pour continuer.\n"
 
 #: dselect/method.cc:183
-#, fuzzy
 msgid "<standard error>"
-msgstr "erreur d'écriture sur la sortie d'erreur standard"
+msgstr "<sortie d'erreur standard>"
 
 #: dselect/method.cc:186
 msgid "error reading acknowledgement of program failure message"
