--- a/debian/changelog
+++ b/debian/changelog
@@ -78,6 +78,7 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * German (Helge Kreutzmann).
   * Polish (Wiktor Wandachowicz). Closes: #548541
   * Swedish (Peter Krefting).
+  * French (Christian Perrier).
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
