Fix copyright statements
Use UTF-8 copyright symbol instead of “(C)”. Add missing “Copyright ©”
to copyright statements instead of relying on the first occurance.
Use properly spelled names.

--- a/dselect/methods/ftp/install
+++ b/dselect/methods/ftp/install
@@ -1,9 +1,9 @@
 #!/usr/bin/perl -w
 # -*-perl-*-
 
-# Copyright (C) 1996 Andy Guy <awpguy@acs.ucalgary.ca>
-#               1998 Martin Schulze <joey@infodrom.north.de>
-#               1999,2009 Raphaël Hertzog <hertzog@debian.org>
+# Copyright © 1996 Andy Guy <awpguy@acs.ucalgary.ca>
+# Copyright © 1998 Martin Schulze <joey@infodrom.north.de>
+# Copyright © 1999, 2009 Raphaël Hertzog <hertzog@debian.org>
 #
 # This program has been distributed under the terms of the GNU GPL.
 
