--- a/man/deb-shlibs.5
+++ b/man/deb-shlibs.5
@@ -1,5 +1,5 @@
-.\" Copyright (C) 1996 Michael Shields <shields@crosslink.net>
-.\" Copyright (C) 2008 Zack Weinberg <zackw@panix.com>
+.\" Copyright © 1996 Michael Shields <shields@crosslink.net>
+.\" Copyright © 2008 Zack Weinberg <zackw@panix.com>
 .\" 
 .\" This is free software; you may redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
