--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -1,4 +1,4 @@
-.\" This manpage is copyright (C) 1996 Michael Shields <shields@crosslink.net>.
+.\" Copyright © 1996 Michael Shields <shields@crosslink.net>
 .\" 
 .\" This is free software; you may redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
