man: Fix a small typo in dpkg.1
Extra “be” in “can be also be”.

Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>
Signed-off-by: Guillem Jover <guillem@debian.org>

--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -24,7 +24,7 @@ controlled entirely via command line parameters, which consist of exactly
 one action and zero or more options. The action-parameter tells \fBdpkg\fP
 what to do and options control the behavior of the action in some way.
 
-\fBdpkg\fP can be also be used as a front-end to \fBdpkg\-deb\fP(1).
+\fBdpkg\fP can also be used as a front-end to \fBdpkg\-deb\fP(1).
 The following
 are \fBdpkg\-deb\fP actions, and if they are encountered, \fBdpkg\fP
 just runs \fBdpkg\-deb\fP with the parameters given to it:
