--- a/man/po/hu.po
+++ b/man/po/hu.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-09-27 05:47+0200\n"
+"PO-Revision-Date: 2009-10-29 20:10+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
@@ -1915,7 +1915,7 @@ msgstr ""
 #. type: Plain text
 #: dpkg.1:31
 msgid ""
-"B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
+"B<dpkg> can also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
