--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-09-06 09:05+0300\n"
-"PO-Revision-Date: 2009-10-24 09:15+0200\n"
+"PO-Revision-Date: 2009-10-29 20:10+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2252,7 +2252,7 @@ msgstr ""
 #. type: Plain text
 #: dpkg.1:31
 msgid ""
-"B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
+"B<dpkg> can also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
