Generate the autoconf version from git
Use a new script to retrieve the version from a file shipped in the
released tarballs, or from the git repository using “git describe”
which will give an appropriate string in case of a snapshot, and add
a possible “-dirty” suffix if the working dir has uncommitted changes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Rework varbuf api to avoid increasing buffers indefinitely when adding
     content to them, regardless of space being already available.
   * Fix build macros to allow start-stop-deaemon to use TIOCNOTTY.
+  * Generate the autoconf version from git to make it easier to see when a
+    snapshot version is being used.
 
   [ Raphaël Hertzog ]
   * Add versioned dependency on base-files (>= 5.0.0) to dpkg-dev to ensure
